bitsandbytes/bnb/tests/ui/bin_enum_no_tag.stderr
error: a `#[bin]` enum needs `tag = <type>` (read a discriminant) or `tag_from = <ctx-param>` (dispatch on context)
 --> tests/ui/bin_enum_no_tag.rs:5:6
  |
5 | enum E {
  |      ^
